--- a/app/src/main/res/layout/item_user_search.xml
+++ b/app/src/main/res/layout/item_user_search.xml
@@ -48,7 +48,7 @@
 
         <TextView
             android:id="@+id/tv_follow"
-            android:layout_width="90dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/textview_rounded_corners"
             android:gravity="center_horizontal"
